--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 Brian Grady
-This is a repository for the Elements of Computing Systems projects.
+This is a repository for the Elements of Computing Systems projects. Woohoo!
