Updates README of repository

--- a/README
+++ b/README
@@ -1,2 +1,12 @@
 Brian Grady
 This is a repository for the Elements of Computing Systems projects. Woohoo!
+
+project01 - Boolean Logic         : build elementary logic gates out of Nand gates
+project02 - Boolean Arithmetic    : build ALU out of elementary logic gates
+project03 - Sequential Logic      : build registers, memory banks, and counter chips out of data-flip-flops
+project04 - Machine Language      : Program in assembly language, get acquainted with Hack computer platform
+project05 - Computer Architecture : Integrate chips from projects 01-03 into a Hack computer platform
+project06 - Assembler             : Develop an assembler that translates Hack assembly language to binary code understood by Hack computer platform
+project07 - Virtual Machine I     : Write the first part of a VM-to-Hack translator, implementing stack arithmetic and memory access commands
+project08 - Virtual Machine II    : Extend the VM-to-Hack translator from project07 into a full-scale translator (with ability to handle program flow and function calling commands)
+project09 - High-Level Language   : Program in Jack, a simple object-based language, to prepare for writing a Jack compiler and the Jack operating system 
