Rea: Improved readability of code
Changed a few variable names and function names.  Wrote functions
that collect together the expect,writexml,advance commands that frequently appear together.

Wrote about project10 in README files.

--- a/README
+++ b/README
@@ -37,8 +37,8 @@ project09 - High-Level Language
     prepare for writing a Jack compiler and the Jack operating system
     
 project10 - Compiler I
-    Write the first part of a Jack compiler, a syntax analyzer
-    (tokenizing and parsing)
+    Write the first part of a Jack compiler: a syntax analyzer
+    that tokenizes the source and generates an XML parse tree
     
 project11 - Compiler II
     (Code Generation)
