Mod: Handling complex array refs and expressions
1) Changed CompilationEngine.compileLet() in JackCompiler.py to store the
address being assigned to in a temporary location while calculating the
value to store in that address

2) Made small change to JackTokenizer's token_specification to correctly
process identifiers with underscores

3) Updated README files for src and project11

JackCompiler passes all tests for project11

--- a/README
+++ b/README
@@ -42,6 +42,8 @@ project10 - Compiler I
     
 project11 - Compiler II
     (Code Generation)
+    Extend the syntax analyzer from project10 into a full-scale Jack
+    compiler that generates executable VM code
 
 project12 - Operating System
     ()
